--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URI=mongodb://localhost:27017/mean_db
+# MONGO_URI=mongodb://localhost:27017/mean_db
+MONGO_URI=mongodb+srv://miradofitahiana03:riFkodKJxoQYCqQQ@garage.f00l8.mongodb.net/?retryWrites=true&w=majority&appName=garage
