--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/garage
+#MONGO_URI=mongodb://localhost:27017/garage
 JWT_SECRET=monSuperSecret
-# MONGO_URI=mongodb+srv://miradofitahiana03:riFkodKJxoQYCqQQ@garage.f00l8.mongodb.net/?retryWrites=true&w=majority&appName=garage
+MONGO_URI=mongodb+srv://miradofitahiana03:riFkodKJxoQYCqQQ@garage.f00l8.mongodb.net/?retryWrites=true&w=majority&appName=garage
